# tree-sitter-tars

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-tars.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_tars/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterTars/: tars.h
bindings/swift/TreeSitterTarsTests/: TreeSitterTarsTests.swift
queries/: test.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: test.txt
